# cappincheck

./: DEMO_EXTENSION_PLAN.md  EVIDENCE_CONTRAST_EXECUTION_PLAN.md  LICENSE  OUTSTANDING_WORK.md  README.md  RUNTIME.md  index.html  pyproject.toml
cappincheck/: __init__.py  audit.py  claims.py  cli.py  gemini.py  ingest.py  report.py  schemas.py
docs/temporary/: archive-evaluation-rubric.md  archive-quality-score.json  archive-quality-score.md  (+5 more)
evaluations/: README.md  gold_set_seed.json
examples/: anthropic_opus_48_report.html  anthropic_opus_48_report.json  anthropic_opus_48_report.md  anthropic_sonnet_45_report.html  anthropic_sonnet_45_report.json  anthropic_sonnet_45_report.md  archive_manifest.json  careful_document.md  careful_report.html  careful_report.json  careful_report.md  contrast_demo.html  contrast_demo.json  contrast_demo.md  demo_document.md  demo_report.html  demo_report.json  demo_report.md  gemini_35_flash_report.html  gemini_35_flash_report.json  gemini_35_flash_report.md  index.html  methodology.html  needs_receipts_document.md  needs_receipts_report.html  needs_receipts_report.json  needs_receipts_report.md  openai_gpt4o_report.html  openai_gpt4o_report.json  openai_gpt4o_report.md  overstated_report.html  overstated_report.json  overstated_report.md  real_public_example.md  xai_grok3_launch_input.md  xai_grok3_report.html  xai_grok3_report.json  xai_grok3_report.md
scripts/: evaluate_archive.py  init_qa_packet.py  rebuild_archive.py  refresh_archive_metadata.py  verify_contrast.py
tests/: test_audited_launch_page.py  test_research_qa.py
(+13 files in other folders)
